<resources>
    <string name="app_name">CoffeePOS</string>

    <string name="sing_in_button">войти</string>
    <string name="sing_out_button">Зарегистрировать</string>
    <string name="register_button">Регистрация</string>
    <string name="sign_out_toolbar_menu">Выйти</string>
    <string name="error_name_ingredient">Ингредиент с таким именем уже существует, выберите другое имя</string>
    <string name="error_name_dishes">Блюдо с таким именем уже существует, выберите другое имя</string>

    <!-- confirm order strings-->
    <string name="total_cost">Общая стоимость:</string>
    <string name="quantity">Кол-во</string>
    <string name="currency">руб.</string>

    <!-- main menu strings-->
    <string name="orders">Заказы</string>
    <string name="dish">Блюда</string>
    <string name="ingrid">Игридиенты</string>

    <!-- order form strings-->
    <string name="apply">Подтвердить</string>
    <string name="button_confirm">Подтверждение</string>

    <!-- dish_drinks strings-->
    <string name="add_new">Добавить новый</string>
    <string name="name">Наименование</string>
    <string name="cost">Стоимость</string>
    <string name="units">Единицы измерения</string>
    <string name="button_edit">Редактировать</string>
    <string name="back">Назад</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_scanner">Сканер</string>
    <string name="barcode">Штрих-код</string>
    <string name="password">Пароль</string>
    <string name="email">email</string>
    <string name="title_registration">Регистрация</string>
    <string name="title_login">Авторизация</string>
    <string name="title_main_menu">Главное меню</string>
    <string name="title_order">Заказ</string>
    <string name="title_confirm_order">Подтверждение заказа</string>
    <string name="title_list_dishes">Список блюд</string>
    <string name="title_list_ingredients">Список ингредиентов</string>
    <string name="title_dish">Блюдо</string>
    <string name="title_ingredient">Игредиент</string>
    <string name="title_choice_image">Выбор изображения</string>
    <string name="title_create_dish">Создание блюда</string>
    <string name="button_delete">Удалить</string>

</resources>