<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.main.ui.MainMenuFragment">


    <Button
        android:id="@+id/button_order"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/orders"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button_dish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/button_dish"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/dish"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button_ingredient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_order" />

    <Button
        android:id="@+id/button_ingredient"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/ingrid"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_dish" />


</androidx.constraintlayout.widget.ConstraintLayout>