<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_8dp"
    android:layout_marginBottom="@dimen/margin_8dp"
    tools:context=".presentation.main.ui.AddDishFragment">

    <ImageView
        android:id="@+id/img_dish_card"
        android:layout_width="@dimen/image_size_card"
        android:layout_height="@dimen/image_size_card"
        android:clickable="true"
        android:focusable="true"
        android:saveEnabled="false"
        android:src="@drawable/add_image_24"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/image_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="img_dish_card,text_input_dish_cost,text_input_dish_name" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_start_end" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_start_end" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dish_ingrid_add_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@id/add_dish_button_apply"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintStart_toStartOf="@id/margin_start"
        app:layout_constraintTop_toTopOf="@id/image_barrier" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_dish_cost"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        app:layout_constraintBottom_toTopOf="@id/image_barrier"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintStart_toEndOf="@id/img_dish_card"
        app:layout_constraintTop_toBottomOf="@id/text_input_dish_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_add_text_dish_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cost"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_dish_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        app:layout_constraintBottom_toTopOf="@id/text_input_dish_cost"
        app:layout_constraintEnd_toEndOf="@id/margin_end"
        app:layout_constraintStart_toEndOf="@id/img_dish_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_add_text_dish_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_dish_button_apply"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/margin_end" />


</androidx.constraintlayout.widget.ConstraintLayout>